// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderer arrow connectors > birthday-party.json with --arrows at 80 cols 1`] = `
"Kids Birthday Party
Planning a kids birthday party with a team of helpers. People resource allocati…

   10:00      10:30     11:00      11:30     12:00     12:30      13:00
   ─ Food ──────────────────────────────────────────────────────────────────────
   10:00 - Bake cake                                            1h (1h 35m flex)
┌─ █████████████████████────────────────────────────────────────────────────────

   11:00 - Ice cake                                            20m (1h 35m flex)
└  ─────────────────────███████─────────────────────────────────────────────────

   12:55 - Serve cake                                                        15m
┌  ─────────────────────────────────────────────────────────────██████──────────

   ─ Venue ─────────────────────────────────────────────────────────────────────
   10:00 - Buy supplies                                                       1h
├  █████████████████████────────────────────────────────────────────────────────

   11:00 - Decorate venue                                                    45m
├  ─────────────────────████████████████────────────────────────────────────────

   11:55 - Blow up balloons                                       30m (15m flex)
├  ────────────────────────────────────────███████████──────────────────────────

   13:10 - Clean up                                                          30m
├┼ ───────────────────────────────────────────────────────────────────██████████

   ─ Activities ────────────────────────────────────────────────────────────────
   11:45 - Welcome guests                                                    10m
├  ─────────────────────────────────────███─────────────────────────────────────

   11:55 - Party games                                                        1h
├─ ────────────────────────────────────────█████████████████████────────────────

   12:25 - Set up games                                           20m (25m flex)
└─ ───────────────────────────────────────────────────███████───────────────────


--- Warnings ---
  - Step 'Blow up balloons' was delayed beyond its available slack due to resou…
  - Step 'Set up games' was delayed beyond its available slack due to resource …"
`;

exports[`renderer arrow connectors > london-sightseeing.json with --arrows at 80 cols 1`] = `
"London Weekend Sightseeing
A two-day London itinerary covering major landmarks and cultural highlights. Di…

   09:00 10:00  11:00 12:00  13:00 14:00  15:00 16:00 17:00  18:00 19:00  20:00
   ─ Day 1 ─────────────────────────────────────────────────────────────────────
   09:00 - Tower of London                                                    2h
┌─ █████████████────────────────────────────────────────────────────────────────

   11:00 - Borough Market lunch                                               1h
└  ─────────────██████──────────────────────────────────────────────────────────

   12:00 - Thames Southbank walk                                             45m
┌  ───────────────────█████─────────────────────────────────────────────────────

   12:45 - Tate Modern                                                    1h 30m
└  ────────────────────────██████████───────────────────────────────────────────

   14:15 - Day 1 dinner                                                       1h
┌  ──────────────────────────────────██████─────────────────────────────────────

   ─ Day 2 ─────────────────────────────────────────────────────────────────────
   15:15 - British Museum                                                 2h 30m
└  ────────────────────────────────────────████████████████─────────────────────

   17:45 - Covent Garden lunch                                               45m
┌  ────────────────────────────────────────────────────────█████────────────────

   18:30 - Westminster walk                                                   1h
└  ─────────────────────────────────────────────────────────────██████──────────

   19:30 - London Eye                                                        30m
┌  ───────────────────────────────────────────────────────────────────████──────

   20:00 - Day 2 dinner                                                       1h
└─ ───────────────────────────────────────────────────────────────────────██████
"
`;

exports[`renderer arrow connectors > roast-chicken.json with --arrows at 80 cols 1`] = `
"Roast Chicken Dinner
A classic Sunday roast with oven-constrained cooking steps. The oven (capacity …

   17:00              17:30               18:00              18:30
   ─ Mains ─────────────────────────────────────────────────────────────────────
   17:00 - Prep chicken                                                      15m
┌─ ██████████───────────────────────────────────────────────────────────────────

   17:15 - Roast chicken                                                  1h 30m
├  ──────────█████████████████████████████████████████████████████████──────────

   18:45 - Make gravy                                                        10m
├┼ ───────────────────────────────────────────────────────────────────███████───

   18:55 - Plate up                                                           5m
├┼ ──────────────────────────────────────────────────────────────────────────███

   ─ Sides ─────────────────────────────────────────────────────────────────────
   17:00 - Prep potatoes                                          20m (55m flex)
├┼ █████████████────────────────────────────────────────────────────────────────

   17:00 - Steam vegetables                                    15m (1h 40m flex)
├┼ ██████████───────────────────────────────────────────────────────────────────

   18:15 - Roast potatoes                                         40m (55m flex)
├┼ ────────────────────────────────────────────────██████████████████████████───

   ─ Setup ─────────────────────────────────────────────────────────────────────
   17:00 - Set table                                           10m (1h 45m flex)
├┼ ██████───────────────────────────────────────────────────────────────────────

   17:10 - Preheat Oven                                            5m (10m flex)
└  │     ████───────────────────────────────────────────────────────────────────
"
`;

exports[`renderer golden fixtures > birthday-party.json at 80 cols 1`] = `
"Kids Birthday Party
Planning a kids birthday party with a team of helpers. People resource allocati…

10:00      10:30      11:00      11:30      12:00      12:30     13:00
─ Food ─────────────────────────────────────────────────────────────────────────
10:00 - Bake cake                                               1h (1h 35m flex)
██████████████████████│          │          │          │         │          │   

11:00 - Ice cake                                               20m (1h 35m flex)
│          │          ███████    │          │          │         │          │   

12:55 - Serve cake                                                           15m
│          │          │          │          │          │        █████       │   

─ Venue ────────────────────────────────────────────────────────────────────────
10:00 - Buy supplies                                                          1h
██████████████████████│          │          │          │         │          │   

11:00 - Decorate venue                                                       45m
│          │          ████████████████      │          │         │          │   

11:55 - Blow up balloons                                          30m (15m flex)
│          │          │          │        ███████████  │         │          │   

13:10 - Clean up                                                             30m
│          │          │          │          │          │         │   ███████████

─ Activities ───────────────────────────────────────────────────────────────────
11:45 - Welcome guests                                                       10m
│          │          │          │    ████  │          │         │          │   

11:55 - Party games                                                           1h
│          │          │          │        ██████████████████████ │          │   

12:25 - Set up games                                              20m (25m flex)
│          │          │          │          │        ███████     │          │   


--- Warnings ---
  - Step 'Blow up balloons' was delayed beyond its available slack due to resou…
  - Step 'Set up games' was delayed beyond its available slack due to resource …"
`;

exports[`renderer golden fixtures > london-sightseeing.json at 80 cols 1`] = `
"London Weekend Sightseeing
A two-day London itinerary covering major landmarks and cultural highlights. Di…

09:00  10:00 11:00  12:00  13:00 14:00  15:00  16:00 17:00  18:00  19:00 20:00
─ Day 1 ────────────────────────────────────────────────────────────────────────
09:00 - Tower of London                                                       2h
█████████████│      │      │     │      │      │     │      │      │     │      

11:00 - Borough Market lunch                                                  1h
│      │     ███████│      │     │      │      │     │      │      │     │      

12:00 - Thames Southbank walk                                                45m
│      │     │      █████  │     │      │      │     │      │      │     │      

12:45 - Tate Modern                                                       1h 30m
│      │     │      │    ██████████     │      │     │      │      │     │      

14:15 - Day 1 dinner                                                          1h
│      │     │      │      │     │ ███████     │     │      │      │     │      

─ Day 2 ────────────────────────────────────────────────────────────────────────
15:15 - British Museum                                                    2h 30m
│      │     │      │      │     │      │ ████████████████  │      │     │      

17:45 - Covent Garden lunch                                                  45m
│      │     │      │      │     │      │      │     │    █████    │     │      

18:30 - Westminster walk                                                      1h
│      │     │      │      │     │      │      │     │      │  ███████   │      

19:30 - London Eye                                                           30m
│      │     │      │      │     │      │      │     │      │      │  ███│      

20:00 - Day 2 dinner                                                          1h
│      │     │      │      │     │      │      │     │      │      │     ███████
"
`;

exports[`renderer golden fixtures > roast-chicken.json at 80 cols 1`] = `
"Roast Chicken Dinner
A classic Sunday roast with oven-constrained cooking steps. The oven (capacity …

17:00               17:30               18:00               18:30
─ Mains ────────────────────────────────────────────────────────────────────────
17:00 - Prep chicken                                                         15m
██████████          │                   │                   │                   

17:15 - Roast chicken                                                     1h 30m
│         ████████████████████████████████████████████████████████████          

18:45 - Make gravy                                                           10m
│                   │                   │                   │         ███████   

18:55 - Plate up                                                              5m
│                   │                   │                   │                ███

─ Sides ────────────────────────────────────────────────────────────────────────
17:00 - Prep potatoes                                             20m (55m flex)
█████████████       │                   │                   │                   

17:00 - Steam vegetables                                       15m (1h 40m flex)
██████████          │                   │                   │                   

18:15 - Roast potatoes                                            40m (55m flex)
│                   │                   │         ███████████████████████████   

─ Setup ────────────────────────────────────────────────────────────────────────
17:00 - Set table                                              10m (1h 45m flex)
███████             │                   │                   │                   

17:10 - Preheat Oven                                               5m (10m flex)
│      ███          │                   │                   │                   
"
`;

exports[`renderer golden fixtures > roast-chicken.json at 120 cols 1`] = `
"Roast Chicken Dinner
A classic Sunday roast with oven-constrained cooking steps. The oven (capacity 1) forces chicken and potatoes to roast …

17:00                         17:30                         18:00                         18:30
─ Mains ────────────────────────────────────────────────────────────────────────────────────────────────────────────────
17:00 - Prep chicken                                                                                                 15m
███████████████               │                             │                             │                             

17:15 - Roast chicken                                                                                             1h 30m
│              ██████████████████████████████████████████████████████████████████████████████████████████               

18:45 - Make gravy                                                                                                   10m
│                             │                             │                             │              ██████████     

18:55 - Plate up                                                                                                      5m
│                             │                             │                             │                        █████

─ Sides ────────────────────────────────────────────────────────────────────────────────────────────────────────────────
17:00 - Prep potatoes                                                                                     20m (55m flex)
████████████████████          │                             │                             │                             

17:00 - Steam vegetables                                                                               15m (1h 40m flex)
███████████████               │                             │                             │                             

18:15 - Roast potatoes                                                                                    40m (55m flex)
│                             │                             │              ████████████████████████████████████████     

─ Setup ────────────────────────────────────────────────────────────────────────────────────────────────────────────────
17:00 - Set table                                                                                      10m (1h 45m flex)
██████████                    │                             │                             │                             

17:10 - Preheat Oven                                                                                       5m (10m flex)
│         █████               │                             │                             │                             
"
`;

exports[`renderer golden fixtures > roast-chicken.json with quiet: false 1`] = `
"Roast Chicken Dinner
A classic Sunday roast with oven-constrained cooking steps. The oven (capacity …

17:00               17:30               18:00               18:30
─ Mains ────────────────────────────────────────────────────────────────────────
17:00 - Prep chicken                                                         15m
██████████          │                   │                   │                   

17:15 - Roast chicken                                                     1h 30m
│         ████████████████████████████████████████████████████████████          

18:45 - Make gravy                                                           10m
│                   │                   │                   │         ███████   

18:55 - Plate up                                                              5m
│                   │                   │                   │                ███

─ Sides ────────────────────────────────────────────────────────────────────────
17:00 - Prep potatoes                                             20m (55m flex)
█████████████       │                   │                   │                   

17:00 - Steam vegetables                                       15m (1h 40m flex)
██████████          │                   │                   │                   

18:15 - Roast potatoes                                            40m (55m flex)
│                   │                   │         ███████████████████████████   

─ Setup ────────────────────────────────────────────────────────────────────────
17:00 - Set table                                              10m (1h 45m flex)
███████             │                   │                   │                   

17:10 - Preheat Oven                                               5m (10m flex)
│      ███          │                   │                   │                   


Total: 2h | Oven: 2/2"
`;

exports[`renderer golden fixtures > simple.json at 80 cols 1`] = `
"Simple Test Schedule

10:00                           10:30                           11:00
10:00 - Step A                                                               30m
████████████████████████████████│                               │               

10:30 - Step B                                                               45m
│                               ████████████████████████████████████████████████

10:30 - Step C                                                    20m (25m flex)
│                               █████████████████████           │               
"
`;
